syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "/auth";

package auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc Verification (VerificationRequest) returns (VerificationResponse) {
    option (google.api.http) = {
      get: "/v1/auth/verification"
    };
  }

  rpc Me (MeRequest) returns (MeResponse) {
    option (google.api.http) = {
      get: "/v1/auth/me"
    };
  }
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
  string phone_number = 4;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message VerificationRequest {
  string email = 1;
  string verification_token = 2;
}

message VerificationResponse {
  string message = 1;
}

message MeRequest {
}

message MeResponse {
  string message = 1;
}